ingress-resources.yaml
#@ load("@ytt:data", "data")

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tap-gui
  namespace: tap-gui
spec:
  virtualhost:
    fqdn: #@ "tap-gui.{}".format(data.values.ingress.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
  routes:
    - services:
        - name: server
          port: 7000

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: app-live-view
  namespace: app-live-view
spec:
  virtualhost:
    fqdn: #@ "app-live-view.{}".format(data.values.ingress.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
  routes:
    - services:
        - name: application-live-view-5112
          port: 80

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: accelerator
  namespace: accelerator-system
spec:
  virtualhost:
    fqdn: #@ "accelerator.{}".format(data.values.ingress.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.ingress.contour_tls_namespace,data.values.ingress.contour_tls_secret)
  routes:
    - services:
        - name: acc-ui-server
          port: 80
